--- a/TodoApp.ConsoleApp/TodoApp.ConsoleApp.csproj
+++ b/TodoApp.ConsoleApp/TodoApp.ConsoleApp.csproj
@@ -6,6 +6,10 @@
     <ProjectReference Include="..\TodoApp.Infrastructure\TodoApp.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
